--- a/app.json
+++ b/app.json
@@ -1,8 +1,8 @@
 {
-  "name": "ＧＡＲＦＩＥＬＤ  ＷＨＡＴＳＡＰＰ ＢＯＴ ｖ8.5",
-  "description": "ＦＲＯＭ ＮＯＩＺＥ ᴅᴇᴠᴇʟᴏᴘᴇʀꜱ (24×7 𝖡𝖮𝖳,𝖡𝗎𝗍𝗍𝗈𝗇 𝖡𝗈𝗍 🦋)",
-  "repository": "https://github.com/Zenoixnoize/GARFIELD-WHATSAPP-BOT-v8",
-  "logo": "https://i.ibb.co/G2bpd2B/Pics-Art-22-03-26-14-51-06-509.png",
+  "name": "ＳＡＣＨＩＴＨ ＭＤ ＷＡ ＢＯＴ ＭＤ ＳＬ",
+  "description": "🇱🇰ＳＡＣＨＩＴＨ ＳＬ ＭＯＤＺ🇱🇰",
+  "repository": "https://github.com/nolove2005/SACHITH-MD-SL",
+  "logo": "https://i.imgur.com/NGaJQta.jpeg",
   "keywords": ["Garfield", "bot", "whatsapp bot", "ZENOI", "multi device"],
   "buildpacks": [
     {
